# jupiter-fan-control

./: PID.py  PKGBUILD  README.md  fancontrol.py  install.sh  jfc-adaptive-config.yaml  jfc-quiet-config.yaml  jfc-static-config.yaml  journal.sh  jupiter-fan-control-config.yaml  jupiter-fan-control.service  restart.sh  setup.cfg  setup.py
usr/lib/systemd/system/: jupiter-fan-control-restart.service  jupiter-fan-control.service
usr/lib/systemd/system/multi-user.target.wants/: jupiter-fan-control.service
usr/lib/systemd/system/suspend.target.wants/: jupiter-fan-control-restart.service
usr/share/jupiter-fan-control/: PID.py  fancontrol.py  galileo-config.yaml  jupiter-config.yaml  jupiter-fan-control-config.yaml
