[metadata]
name = jupiter_fan_control
version = 0.0.1
author = Simon Hallsten
author_email = flightlessmangoyt@gmail.com
description = PID controller for jupiter fan
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: Linux

[options]
package_dir =
  = src

packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jupiter-fan-control = jupiterfan:main

[pycodestyle]
max-line-length = 160